--- a/imagery-implementation/index.html
+++ b/imagery-implementation/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>ImageryImplementation</title>
-  <base href="/">
-
+  <base href="https://ansyn.github.io/imagery-implementation/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.15ab79ebf9a9f4e1a4d8.css"></head>
+<link rel="stylesheet" href="https://ansyn.github.io/imagery-implementation/styles.15ab79ebf9a9f4e1a4d8.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="scripts.da676fd9c79894ad01f6.js"></script><script type="text/javascript" src="main.b32b18f9ea11842de0b3.js"></script></body>
+<script type="text/javascript" src="https://ansyn.github.io/imagery-implementation/runtime.93f7d3f16c6b76e3522e.js"></script><script type="text/javascript" src="https://ansyn.github.io/imagery-implementation/polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="https://ansyn.github.io/imagery-implementation/scripts.da676fd9c79894ad01f6.js"></script><script type="text/javascript" src="https://ansyn.github.io/imagery-implementation/main.b32b18f9ea11842de0b3.js"></script></body>
 </html>
